--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^1.0",
         "sass": "^1.56.1",
+        "tailwindcss": "^3.4.3",
         "vite": "^5.0",
         "vue": "^3.4.23"
     },
     "dependencies": {
+        "laravel-vue-pagination": "^4.1.3",
         "sweetalert2": "^11.10.8",
         "vform": "^2.1.2"
     }
